--- a/plugin/locale/cs/LC_MESSAGES/Foreca.po
+++ b/plugin/locale/cs/LC_MESSAGES/Foreca.po
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Foreca 3.1.3\n"
+"Project-Id-Version: Foreca 3.2.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-05-06 13:57+0200\n"
-"PO-Revision-Date: 2016-05-06 13:57+0200\n"
-"Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
+"PO-Revision-Date: 2017-10-04 04:24+0100\n"
+"Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: ims\n"
 "Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
@@ -13,7 +13,7 @@ msgstr ""
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: ../../..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Poedit 1.8.7\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: plugin.py:21 plugin.py:27 ui.py:615 ui.py:634
@@ -130,7 +130,7 @@ msgstr "Mapy"
 
 #: ui.py:634
 msgid "Version "
-msgstr "Verze "
+msgstr "v."
 
 #: ui.py:639 ui.py:1105 ui.py:1342 ui.py:1623
 msgid "Exit - End"
@@ -149,14 +149,12 @@ msgid "OK - City"
 msgstr "OK - Město"
 
 #: ui.py:643
-#, fuzzy
 msgid "Left - Previous day"
-msgstr "Vlevo - Předchozí stránka"
+msgstr "Vlevo - předchozí den"
 
 #: ui.py:644
-#, fuzzy
 msgid "Right - Next day"
-msgstr "Vpravo - Další stránka"
+msgstr "Vpravo - následující den"
 
 #: ui.py:645
 msgid "Up - Previous page"
